[tool.poetry]
name = "cloudflare-r2"
description = "Wrapper around commonly used boto3 functions in Cloudflare R2 API."
version = "0.0.3"
authors = ["Marcelino G. Veloso III <contact@mv3.dev>"]
readme = "README.md"
homepage = "https://mv3.dev"
repository = "https://github.com/justmars/cloudflare-r2"
documentation = "https://justmars.github.io/cloudflare-r2"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
]

[tool.poetry.dependencies]
python = "^3.11"
start-cloudflare = "^0.0.2"
boto3 = "^1.26"

[tool.poetry.group.dev.dependencies] # latest as of June 2023
pytest = "^7.3"
pytest-cov = "^2.12.1"
pre-commit = "^3.3"
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.16"
ipykernel = "^6.23.1"

[tool.pytest.ini_options]
minversion = "7.3"
addopts = "-ra -q --doctest-modules --cov"
filterwarnings = [
  "ignore::DeprecationWarning", # DeprecationWarning: pkg_resources is deprecated as an API
]
testpaths = ["tests", "cloudflare_r2"]

[tool.ruff]
ignore = ["F401", "F403"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
