[project]
name = "cloudflare-r2"
version = "0.0.5"
description = "Wrapper around commonly used boto3 functions in Cloudflare R2 API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "start-cloudflare >= 0.0.7",
    "boto3 >= 1.40.49",
    "rich >= 14.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    # testing
    "pytest >= 8.4",
    "pytest-cov >= 7.0",
    # docs
    "mkdocs >= 1.6.1",
    "mkdocs-material >= 9.6.20",
    "mkdocstrings[python] >= 0.30.1",
]

[project.scripts]
r2 = "r2:cli"

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-ra -q -vv --cov --doctest-modules"
testpaths = ["tests", "src/cloudflare_r2"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["F401", "F403"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]

[tool.uv]
package = true
