[project]
name = "cloudflare-r2"
version = "0.0.6"
description = "Wrapper around commonly used boto3 functions in Cloudflare R2 API."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3 >= 1.42",
    "click >= 8.3.3",
    "pydantic-settings >= 2.14",
    "python-dotenv >= 1.2.2",
    "rich >= 15.0",
]

[dependency-groups]
dev = [
    # testing
    "pytest >= 9.0",
    "pytest-cov >= 7.0",
    # docs
    "zensical>=0.0.39",
    "mkdocstrings-python>=2.0.3",
]

[project.scripts]
r2 = "r2:cli"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q -vv --cov --doctest-modules"
testpaths = ["tests", "src/r2"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["F401", "F403"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]

[tool.uv]
package = true
